samples/_failures_safe/1761436187_390b0c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0161e4c6.c: In function ‘main’:
./samples/SAFE/__tmp_0161e4c6.c:182:5: error: expected expression at end of input
  182 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_0161e4c6.c:182:5: error: expected declaration or statement at end of input
